--- a/src/globals.css
+++ b/src/globals.css
@@ -1,3 +1,75 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes shakeSideToSide {
+    0% {
+        transform: translateX(0);
+    }
+    10% {
+        transform: translateX(-3px);
+    }
+    20% {
+        transform: translateX(3px);
+    }
+    30% {
+        transform: translateX(-3px);
+    }
+    40% {
+        transform: translateX(3px);
+    }
+    50% {
+        transform: translateX(-3px);
+    }
+    60% {
+        transform: translateX(3px);
+    }
+    70% {
+        transform: translateX(-3px);
+    }
+    80% {
+        transform: translateX(3px);
+    }
+    90% {
+        transform: translateX(-3px);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes shakeUpAndDown {
+    0% {
+        transform: translateY(0);
+    }
+    10% {
+        transform: translateY(-2px);
+    }
+    20% {
+        transform: translateY(2px);
+    }
+    30% {
+        transform: translateY(-2px);
+    }
+    40% {
+        transform: translateY(2px);
+    }
+    50% {
+        transform: translateY(-2px);
+    }
+    60% {
+        transform: translateY(2px);
+    }
+    70% {
+        transform: translateY(-2px);
+    }
+    80% {
+        transform: translateY(2px);
+    }
+    90% {
+        transform: translateY(-2px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
